# ChthollyLang

./: .gitignore  .travis.yml  CMakeLists.txt  CMakelists.txt  CMakelists.txt.in  NOTEBOOK.md  README  README.md  appveyor.yml
.circleci/: config.yml
demo/: parser-demo.cpp  parser.cpp  wparser-demo.cpp  wparser.cpp
doc/: grammar.md
src/: chartype.hpp  chtholly.cpp  chtholly.h  chtholly.hpp  parser.catch.hpp  parser.hpp  parserc.catch.hpp  parserc.hpp  parsetree.hpp
src/chtholly/: automata.hpp  chartype.hpp  functional.hpp  instruction.hpp  irgenerator.hpp  parser.hpp  parserc.hpp  parsetree.hpp  stringconv.hpp
test/: 171106.cpp  171107.cpp  171121.cpp  171129.cpp  171130.cpp  irgen-test.cpp  parser-test.cpp
